Add missing build-dependencies on bison and flex
Change-Id: I3463f11f9c11a8b5d18c7da34f7dd12b2579700b

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ircd-ratbox
 Section: unknown
 Priority: extra
 Maintainer: Chase Pettet <cpettet@wikimedia.org>
-Build-Depends: debhelper (>= 8.0.0), autotools-dev
+Build-Depends: debhelper (>= 8.0.0), autotools-dev, bison, flex
 Standards-Version: 3.9.2
 Homepage: http://ratbox.org
 
