Add a Conflicts on whois (filename clash with /usr/bin/mkpasswd)
Declare a package conflict with whois: ircd-ratbox ships
/usr/bin/mkpasswd (same as whois). The same is already true for
the ircd-ratbox package used on argon. If ircd-ratbox were still
in the Debian archive, the proper way would be to rename the
binary, but in this case simply conflicting with whois is also fine.

Bug: T132427
Change-Id: Ia39887cccde887657cfa58f7617bb62e003c72eb

--- a/debian/control
+++ b/debian/control
@@ -9,5 +9,6 @@ Homepage: http://ratbox.org
 Package: ircd-ratbox
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Conflicts: whois
 Description: ircd-ratbox is an advanced, stable and fast ircd.
  Wikimedia user read-only irc for edit events broadcasting.
